--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,14 +18,13 @@
     height: auto;
   }
   
-  html {
-    box-sizing:border-box;
-  }
   ul {
     list-style: none;
   }
 
-  
+  html {
+    box-sizing: border-box;
+  }
 body {
     font-family: var(--primary-font);
 }
@@ -33,8 +32,6 @@ body {
     width: 1200px;
     margin-right: auto;
     margin-left: auto;
-
-    
 }
 /* Header section style*/
 
@@ -46,13 +43,12 @@ body {
     border-width: 1px;
     border-color: #ececec;
     border-right: #FFFFFF;
-
+    
 }
 
 .header .container {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
     margin-top: 30px;
   }
 
@@ -85,21 +81,20 @@ body {
 
 .header__navigation a {
     text-decoration: none;
-    font-family: var(--primary-font);
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
     color: var(--black);
-   
-    
 }
 .header__navigation a:hover {
     color: var(--blue);
 }
-
+.header__info ul {
+    display: flex;
+    gap: 50px;
+}
 .header__info a {
     text-decoration: none;
-    font-family: var(--primary-font);
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
@@ -118,7 +113,6 @@ height: 600px;
 
 .hero-section__h1 {
     text-decoration: none;
-    font-family: var(--primary-font);
     font-weight: 900;
     font-size: 44px;
     line-height: 136%;
@@ -128,7 +122,6 @@ height: 600px;
     padding-top: 180px;
 }   
 .hero-section__service {
-    font-family: var(--primary-font);
     font-weight: 700;
     font-size: 16px;
     line-height: 16px;
@@ -156,7 +149,6 @@ margin-top: 30px;
 }
 .about__h5 {
     text-decoration: none;
-    font-family: var(--primary-font);
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
@@ -164,7 +156,6 @@ margin-top: 30px;
 }
 .about__text {
     text-decoration: none;
-    font-family: var(--primary-font);
     font-weight: 400;
     font-size: 14px;
     line-height: 16px;
@@ -191,10 +182,10 @@ margin-top: 30px;
     display: flex;
     gap: 30px;
     padding-top: 94px;
+       
 }
 .h2 {
     text-decoration: none;
-    font-family: var(--primary-font);
     font-weight: 700;
     font-size: 36px;
     line-height: 16px;
@@ -203,7 +194,6 @@ margin-top: 30px;
 }
 
 .h6 {
-    font-family: var(--primary-font);
     font-size: 16px;
     font-weight: 500;
     display: flex;
@@ -211,7 +201,6 @@ margin-top: 30px;
    
 }
 .team {
-    font-family: var(--primary-font);
     font-size: 16px;
     font-weight: 400;
     color: var(--light-black);
@@ -238,7 +227,6 @@ margin-top: 30px;
 }
 .footer__addres a {
     text-decoration: none;
-    font-family: var(--primary-font);
     font-weight: 500;
     font-size: 14px;
     line-height: 35px;
@@ -250,7 +238,6 @@ margin-top: 30px;
 /* Portfolio style*/
 
 .portfolio__nav {
-    font-family: var(--primary-font);
     font-weight: 500;
     font-size: 16px;
     border: var(--white);
@@ -267,11 +254,14 @@ background-color: var(--blue);
    flex-wrap: wrap;
    gap: 30px;
    padding-bottom: 94px;
+   
 }
 .container__portfolio {
     border-style:solid;
     border-width: 1px;
     border-color: #ececec;
+    box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.3);
+    
 }
 .portfolio-button .container {
     display: flex;
