--- a/CSS/style.css
+++ b/CSS/style.css
@@ -109,6 +109,11 @@ body {
 .hero-section {
 background-color: var(--light-black);
 height: 600px;
+background-image: linear-gradient(
+    0deg,
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)
+  ), url(/images/ImgBack.jpg)
 }
 
 .hero-section__h1 {
