--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,6 +35,10 @@ body {
 }
 /* Header section style*/
 
+.item0 {
+    width: 20px;
+    height: 15px;
+}
 
 .header {
     background-color: #FFFFFF;
@@ -89,9 +93,10 @@ body {
 .header__navigation a:hover {
     color: var(--blue);
 }
-.header__info ul {
+.header__info {
     display: flex;
-    gap: 50px;
+    gap: 15px;
+   
 }
 .header__info a {
     text-decoration: none;
@@ -150,7 +155,7 @@ margin-top: 30px;
     display: flex;
     gap: 50px;
     justify-content: center;
-    padding-top: 94px;
+    padding-top: 30px;
 }
 .about__h5 {
     text-decoration: none;
@@ -167,6 +172,7 @@ margin-top: 30px;
     color: var(--black);
 }
 /* What we do style*/ /* Our team style*/
+
 .what-section {
     height: 386px;
 }
@@ -221,10 +227,74 @@ margin-top: 30px;
     margin-top: 100px;
 }
 .team-section__cards {
+    background-color: var(--white);
     border-style:solid;
     border-width: 1px;
     border-color: #ececec;
     box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.3);
+}
+/* Primele carduri*/
+.about-cards {
+display: flex;
+justify-content: center;
+gap: 40px;
+margin-top: 94px;
+}
+.about-cards li {
+    background-color: var(--light-grey);
+    padding-inline: 90px;
+    padding-block: 20px;
+    border-radius: 4px;
+}
+.item1 {
+    width: 70px;
+    height: 70px;
+}
+ /*our team social-cards*/
+.team-section__social {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.team-section__social li {
+    padding: 12px;
+    border-radius: 100px;
+    background-color:var(--white);
+    
+}
+.team-section__social li:hover .item2 {
+   background-color: var(--blue);
+}
+.item2 {
+    width: 20px;
+    height: 20px;
+ }
+
+/*Regular Customers*/
+.titlu3 {
+    text-align: center;
+}
+.Customers-section {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    margin-top: 180px;
+    margin-bottom: 94px;
+}
+.item3 {
+    width: 106px;
+    height: 60px;
+}
+.Customers-section li {
+    padding-inline: 35px;
+    padding-block: 20px;
+    border-style:solid;
+    border-width: 2px;
+    border-color: #AFB1B8;
+    border-radius: 4px;
+}
+.Customers-section li:hover {
+    border-color:var(--blue)
 }
 /* Footer section style*/
 .footer {
@@ -232,7 +302,7 @@ margin-top: 30px;
     background-color: var(--light-black);
 }
 .footer-addres {
-    padding-top: 60px;
+   padding-top: 60px;
    margin-left: 340px;
     
 }
