--- a/CSS/style.css
+++ b/CSS/style.css
@@ -209,7 +209,7 @@ margin-top: 30px;
     font-weight: 500;
     display: flex;
     justify-content: center;
-   
+    padding-top: 20px;
 }
 .team {
     font-size: 16px;
@@ -217,6 +217,7 @@ margin-top: 30px;
     color: var(--light-black);
     display: flex; 
     justify-content: center;
+    padding-top: 10px;
 }
 .titlu1 {
     text-align: center; 
