--- a/CSS/style.css
+++ b/CSS/style.css
@@ -118,7 +118,7 @@ background-image: linear-gradient(
     0deg,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)), 
-    url(/images/2.jpg);
+    url(/images/ImgBack.jpg);
 }
 
 .hero-section__h1 {
