--- a/CSS/style.css
+++ b/CSS/style.css
@@ -114,7 +114,10 @@ body {
 .hero-section {
 background-color: var(--light-black);
 height: 600px;
-background-image: url(../images/back.jpg);
+background-image: linear-gradient(0deg,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)), 
+        url(../images/back.jpg);
 }
 
 .hero-section__h1 {
