--- a/CSS/style.css
+++ b/CSS/style.css
@@ -416,3 +416,41 @@ background-color: var(--blue);
     background-color: #fff;
     color: #2a2a2a;
 }
+/* Style modal */
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+[data-modal] {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.is-hidden [data-modal-content] {
+    transform: translate(-50%, -50%) scale(0.5);
+}
+
+[data-modal-content] {
+    width: 528px;
+    height: 581px;
+    background-color: var(--white);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition-duration: 1s;
+    padding: 20px;
+}
+
+[data-modal-close] {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
